--- a/index.html
+++ b/index.html
@@ -158,14 +158,10 @@
       <a href="./index.html" class="logo"
         >Web<span class="studio">Studio</span></a
       >
-      <p class="footer-p">
-        Increase the flow of customers and sales for your business with digital
+      <p class="footer-p"></p>
+        <p>Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
   </body>
-</html>
-
-</footer>
-</body>
 </html>
